Modification du Makefile pour utiliser Rubber plutôt que pdflatex.

--- a/qualite/specifications/Makefile
+++ b/qualite/specifications/Makefile
@@ -1,7 +1,7 @@
 all: compile clean
 
 compile:
-	pdflatex specifications.tex
+	rubber -d specifications.tex
 
 clean:
 	rm -rf *.aux *.log *.toc *.out
