chore(soutenance): update ".gitignore"
Avoid to take into account the "diapo.pdf" file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 qualite/conception/conception.pdf
 qualite/rapport/rapport.pdf
 qualite/specifications/specifications.pdf
+qualite/soutenance/diapo.pdf
